# minesweeper

./: .gitignore  Makefile  Pipfile  README.md  action.py  analyze_algoritm.py  analyze_solver.py  analyze_started_board.py  asap_todo.md  asset.py  board.py  cell.py  cell_pattern.py  classes.py  config.py  debug.py  demo_highlight_cell_from_outsise.py  demo_run_minesweepr.py  engine.py  global_.py  main.py  manual_interract.py  manual_save_board.py  matrix.py  maus.py  mine_helper.py  mine_helper2.py  mine_tk.py  mine_tk.spec  mine_tk_before_rewrite.py  mouse_controller.py  mouse_log.txt  patterns.py  perfomance.md  playgame.py  proba.py  pyproject.toml  read.md  save_field.py  save_load.py  (+14 more)
111/: 11.md
asset/: __init__.py  asset.py
asset_16_2560x1440/: asset.py
asset_22_2560x1440/: asset.py
asset_24_1920x1080/: asset.py  cell_sizes.md
asset_28_2560x1440/: asset.py
asset_tk/: asset_tk_orig.7z  resize.py
asset_vienna/: asset.py
assets/: __init__.py  asset.py  asset_copy.py
classes/: __init__.py  cell.py  game.py  matrix.py  matrix_io.py  play_matrix.py  solve_matrix.py  utility.py
core/: __init__.py  board.py  cell.py  game.py  matrix.py  matrix_io.py  play_matrix.py  screen_matrix.py  utility.py
exceptions/: __init__.py  exceptions.py
found_led_digits/: chat-gpt.py  demo_scan_countur_analyze.py
js/: Board.js  Board.py  BruteForceAnalysis.js  Brute_force.js  EfficiencyHelper.js  FiftyFiftyHelper.js  LongTermRiskHelper.js  SolutionCounter.js  SolutionCounter.py  solver_main.js  solver_main.py  tile.py
minesweeper/: main.py  readme.md  улучшение_проета.md
minesweepr/: NOTICE  __init__.py  minesweeper.py  minesweeper_util.py  transformer.py  util.py
mouse_controller/: __init__.py  buttons.py  mouse_controller.py
patterns/: 5x5_E1_1.txt  5x5_E1_1__.txt  example-1.txt  example-2.txt  readme.md
pic/: cell_sizes.md
proba-ms-tkinter/: mstk.py
saves/: save_12-Jan-2025--19.55.53.161659.txt
screen_controller/: __init__.py  readme.md  recognize_led_digits.py  scan.py  scan_nms.py  util.py
solver/: __init__.py  classes.py  multi_solver.py  noguess_finish.py  readme.md  solver_B1.py  solver_B1E1.py  solver_B1_new.py  solver_B2.py  solver_B2_new.py  solver_E1.py  solver_E1_new.py  solver_E2.py  solver_E2_new.py  solver_R1.py  solver_R1_corner.py  solver_R1_smart.py  solver_digit_TODO.py  solver_gauss.py  solver_human.py  solver_human_almost_work.py  solver_noguess.py
tests/: test_matrix_around_closed_cells.py  test_matrix_cell_distance.py  test_matrix_display.py  test_matrix_neighbor.py  test_solver.py
useful_code_examples/: action.py  analyze_started_board.py  around_cell.py  examples.py  (+21 more)
(+24 files in other folders)
