[tool.poetry]
name = "minesweeper"
version = "0.1.0"
description = ""
authors = ["Alexey <mr.swasher@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^2.2.0"
mss = "^10.0.0"
pywin32 = "^308"
mouse = "^0.7.1"
pynput = "^1.7.7"
icecream = "^2.1.3"
xxhash = "^3.5.0"
opencv-python = "^4.10.0.84"
pillow = "^11.0.0"
humancursor = "^1.1.5"
pytest = "^8.3.4"
tkinter-tooltip = "^3.1.2"
nuitka = "^2.5.9"


#[build-system]
#requires = ["poetry-core"]
#build-backend = "poetry.core.masonry.api"

[build-system]
requires = ["setuptools>=42", "wheel", "nuitka", "toml"]
build-backend = "nuitka.distutils.Build"

[tool.nuitka]
# These are not recommended, but they make it obvious to have effect.

# boolean option, e.g. if you cared for C compilation commands, leading
# dashes are omitted
show-scons = true

# options with single values, e.g. enable a plugin of Nuitka
enable-plugin = "tk-inter"

# options with several values, e.g. avoid including modules, accepts
# list argument.
nofollow-import-to = ["*.tests", "*.distutils"]

include-package-data = "settings.ini"
include-data-dir = "/asset/asset_svg=asset/asset_svg"
